<resources>
    <string name="app_name">PartyPal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ump_food_delivery">UMP Food Delivery</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myCart">My Cart</string>
    <string name="product_name">Product Name</string>
    <string name="view_more">View More</string>
    <string name="payment">fragment_payment</string>
    <string name="maps">fragment_maps</string>
    <string name="post_party">Post Party</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="partypal">PartyPal</string>
    <string name="submit">Submit</string>
    <string name="contact_information">Contact Information</string>
    <string name="date_and_time_e_g_sunday_may_22nd_2_00_pm_to_4_00_pm">Date and Time (e.g., Sunday, May 22nd, 2:00 PM to 4:00 PM)</string>
    <string name="host_name">Host Name</string>
    <string name="location">Location</string>
    <string name="party_description">Party Description</string>
    <string name="party_title">Party Title</string>
    <string name="log_out">Log Out</string>
    <string name="your_post">Your Post</string>
</resources>