<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.PartyPal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_yourpost"
        android:name="com.example.PartyPal.ui.yourpost.YourPost"
        android:label="@string/your_post"
        tools:layout="@layout/your_post_fragment" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.PartyPal.ui.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/favourite_fragment" />
     <fragment
        android:id="@+id/myCartFragment"
        android:name="com.example.PartyPal.ui.MyCartFragment"
        android:label="@string/myCart"
        tools:layout="@layout/fragment_my_cart" />
    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.PartyPal.PaymentFragment"
        android:label="@string/payment"
        tools:layout="@layout/fragment_payment" />
    <fragment
        android:id="@+id/nav_maps"
        android:name="com.example.PartyPal.MapsFragment"
        android:label="@string/maps"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/nav_postparty"
        android:name="com.example.PartyPal.ui.postparty.PostPartyFragment"
        android:label="Post Party"
        tools:layout="@layout/fragment_postparty" />
</navigation>